Bug 1933568 - Size dialog width to content inside r=mconley,emilio,desktop-theme-reviewers
This resolves an issue where dialogs with three buttons and longer text
were getting cut off.

Differential Revision: https://phabricator.services.mozilla.com/D230440

--- a/toolkit/components/prompts/content/commonDialog.css
+++ b/toolkit/components/prompts/content/commonDialog.css
@@ -4,6 +4,7 @@
 
 :root {
   min-width: 29em;
+  width: min-content;
 }
 
 dialog[insecureauth] {
